--- a/package.json
+++ b/package.json
@@ -12,14 +12,15 @@
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-router": "^7.5.3",
+    "react-router-dom": "^7.9.1",
     "three": "0.169.0",
     "zod": "^3.24.3"
   },
   "devDependencies": {
     "@cloudflare/vite-plugin": "^1.12.0",
     "@eslint/js": "9.25.1",
-    "@getmocha/vite-plugins": "latest",
     "@getmocha/users-service": "^0.0.4",
+    "@getmocha/vite-plugins": "latest",
     "@types/node": "22.14.1",
     "@types/react": "19.0.10",
     "@types/react-dom": "19.0.4",
@@ -33,7 +34,7 @@
     "tailwindcss": "^3.4.17",
     "typescript": "5.8.3",
     "typescript-eslint": "8.31.0",
-    "vite": "^7.1.3",
+    "vite": "^7.1.5",
     "wrangler": "^4.33.0"
   },
   "scripts": {
