--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@hono/zod-validator": "^0.5.0",
     "@types/three": "0.169.0",
     "cannon-es": "0.20.0",
+    "firebase": "^12.3.0",
     "hono": "4.7.7",
     "lucide-react": "^0.510.0",
     "react": "19.0.0",
